sdk/v0.53/learn/concepts/encoding.mdx
---
title: Encoding
---

In the previous section, you learned that state is stored as raw byte arrays in a key-value store and that modules encode structured data into those bytes before writing. This page explains how that encoding works, why the Cosmos SDK chose Protocol Buffers, and what that means for module development.

## What is Protobuf?

[Protocol Buffers](https://protobuf.dev/) (protobuf) is a language-neutral, binary serialization format developed by Google. You define your data structures in `.proto` files using a schema language, then generate code in your target language from that schema. The generated code handles serialization (converting structured data into bytes) and deserialization (converting bytes back into structured data).

A simple protobuf message looks like this:

```proto
message MsgSend {
  string from_address = 1;
  string to_address   = 2;
  repeated Coin amount = 3;
}
```

Each field has a name, a type, and a field number. The field numbers are what protobuf actually uses during encoding; field names are only present in the schema, not in the serialized bytes. This is why protobuf is compact and why you can rename fields without breaking wire compatibility.

## Why the Cosmos SDK uses protobuf

The Cosmos SDK uses protobuf for a fundamental reason: consensus requires determinism.

Every validator in the network independently executes each block. After execution, each validator computes the AppHash, a cryptographic hash of the application state. For validators to agree on the AppHash, they must all produce exactly the same bytes for every piece of state they write.

Protobuf satisfies this requirement. The Cosmos SDK enforces **deterministic protobuf serialization** so that identical data always produces identical bytes across all nodes. This is formalized in [ADR-027 (Deterministic Protobuf Serialization)](https://github.com/cosmos/cosmos-sdk/blob/v0.53.0/docs/architecture/adr-027-deterministic-protobuf-serialization.md), which specifies constraints such as requiring fields to appear in ascending field-number order and varint encodings to be as short as possible. The SDK validates incoming transactions against these rules before processing them, so a non-deterministically encoded transaction is rejected rather than producing divergent state. Every validator encoding the same data under these rules produces an identical byte sequence.

Beyond determinism, protobuf provides:

- **Compact encoding**: binary wire format is smaller than JSON or XML, which matters for transaction throughput and block size.
- **Schema evolution**: fields can be added or deprecated without breaking existing clients, which is critical for chain upgrades.
- **Code generation**: `.proto` files generate Go structs, gRPC service stubs, and REST gateway handlers automatically.
- **Cross-language support**: clients in any language can interact with the chain by generating code from the same `.proto` files.

## Binary and JSON encoding

The Cosmos SDK uses protobuf in two encoding modes:

**Binary encoding** is the default for everything that participates in consensus: transactions written to blocks, state stored in KV stores, and genesis data. Binary encoding is compact and deterministic. When a transaction is broadcast to the network, it travels as protobuf binary. When a module writes state, it serializes values to protobuf binary before calling `Set` on the store.

**JSON encoding** is used for human-readable output: the CLI, gRPC-gateway REST endpoints, and off-chain tooling. The Cosmos SDK uses protobuf's JSON encoding (`ProtoMarshalJSON`) rather than standard Go JSON, which preserves field names from the `.proto` schema and handles special types like `Any` correctly. {/* cosmos/cosmos-sdk codec/json.go:12 — var defaultJM = &jsonpb.Marshaler{OrigName: true, EmitDefaults: true, AnyResolver: nil} — OrigName:true preserves proto field names from the schema */} {/* cosmos/cosmos-sdk codec/proto_codec.go:149 — return ProtoMarshalJSON(o, pc.interfaceRegistry) — MarshalJSON delegates to ProtoMarshalJSON with the interface registry */}

The most important rule: **binary encoding is consensus-critical**. Two validators must produce identical binary bytes for identical data. JSON is only used where humans or external clients need to read the data; it never influences the AppHash.

```text
Consensus-critical path         Human-readable path
─────────────────────────       ─────────────────────────
Transaction bytes (binary)      CLI output (JSON)
State KV values (binary)        REST API responses (JSON)
Genesis KV state (binary)       Block explorers (JSON)
```

Note: genesis data is distributed as JSON in `genesis.json`, but during chain initialization `InitGenesis` deserializes that JSON into protobuf structs and writes them to the KV store as binary. The KV store—and therefore the AppHash—only ever contains the binary form.

## Transaction encoding

Transactions are protobuf messages defined in `cosmos.tx.v1beta1`. A transaction is composed of three parts: {/* cosmos/cosmos-sdk proto/cosmos/tx/v1beta1/tx.proto:16 — message Tx { TxBody body = 1; AuthInfo auth_info = 2; repeated bytes signatures = 3; } */}

```text
Tx
 ├─ TxBody
 │   └─ repeated google.protobuf.Any messages
 ├─ AuthInfo
 │   ├─ repeated SignerInfo (each with sequence)
 │   └─ Fee
 └─ repeated bytes signatures
```

- **TxBody** contains the messages to execute, serialized as `repeated google.protobuf.Any messages`. {/* cosmos/cosmos-sdk proto/cosmos/tx/v1beta1/tx.proto:104 — repeated google.protobuf.Any messages = 1 — TxBody.messages field */}
- **AuthInfo** contains signer information (including the per-signer sequence number) and fee.
- **signatures** contains the cryptographic signatures, one per signer.

Messages inside the transaction are stored as `google.protobuf.Any` values so that a single transaction can contain multiple message types from different modules.

When a user submits a transaction, the SDK encodes it as a `TxRaw`—a flat structure with the `TxBody` bytes, `AuthInfo` bytes, and signatures already serialized—and broadcasts that binary representation over the network. {/* cosmos/cosmos-sdk x/auth/tx/encoder.go:27 — return proto.Marshal(raw) — DefaultTxEncoder serializes TxRaw to binary bytes for broadcast */}

## Transaction signing and `SignDoc`

Transactions are not signed directly. Instead, the SDK constructs a deterministic structure called a **`SignDoc`**, which defines exactly what bytes the signer commits to: {/* cosmos/cosmos-sdk proto/cosmos/tx/v1beta1/tx.proto:50 — message SignDoc { bytes body_bytes = 1; bytes auth_info_bytes = 2; string chain_id = 3; uint64 account_number = 4; } */}

```text
SignDoc
 ├─ body_bytes        (serialized TxBody)
 ├─ auth_info_bytes   (serialized AuthInfo, includes sequence per signer)
 ├─ chain_id          (prevents cross-chain replay)
 └─ account_number    (ties the signature to a specific on-chain account)
```

The `SignDoc` is serialized to protobuf binary and then signed with the user's private key:

```text
signature = Sign(proto.Marshal(SignDoc))
```

Because `SignDoc` is serialized deterministically, all validators verify the exact same bytes when checking transaction signatures. The per-signer sequence number lives in `AuthInfo.SignerInfo.sequence` and is included in `auth_info_bytes`, which is part of `SignDoc`—this is what prevents replay attacks.

## How protobuf is used in modules

Every piece of data that crosses a module boundary, gets stored, or travels over the wire is defined in a `.proto` file and serialized with protobuf.

**Messages and transactions**: Each module defines its transaction messages in a `tx.proto` file. The `MsgSend` definition above is an example. When a user submits a transaction, the SDK serializes the transaction body (including its messages) to binary using protobuf before broadcasting it. {/* cosmos/cosmos-sdk x/auth/tx/encoder.go:27 — return proto.Marshal(raw) — DefaultTxEncoder serializes the transaction to protobuf binary bytes for broadcast */}

**Queries**: Modules define their query services in `query.proto`. Request and response types are protobuf messages. The SDK uses gRPC for queries, and gRPC uses protobuf as its serialization format by definition.

**State types**: Data stored in the KV store is protobuf-encoded. A module that stores a custom struct first marshals it to bytes using the codec, then writes those bytes to the store. When reading, it unmarshals the bytes back into the struct.

**Genesis**: Genesis state is defined in `genesis.proto`. `InitGenesis` and `ExportGenesis` use protobuf to deserialize genesis state from `genesis.json` and serialize it back. {/* cosmos/cosmos-sdk x/auth/module.go:158 — cdc.MustUnmarshalJSON(data, &genesisState) — InitGenesis uses the JSON codec to unmarshal JSON genesis data into a protobuf-typed GenesisState struct */} {/* cosmos/cosmos-sdk x/auth/module.go:166 — return cdc.MustMarshalJSON(gs) — ExportGenesis serializes the genesis state back to JSON using the codec */}

**State keys**: While values in the KV store are protobuf-encoded structs, keys are manually constructed byte sequences defined by each module. A module might store balances under a key like:

```text
0x02 | address_bytes  →  protobuf-encoded Coin
```

Modules define their key layout with byte-prefix constants to avoid collisions with other modules and to maintain a predictable state layout. In practice, modules do not build raw keys by hand. Instead they create **prefix stores**, which automatically prepend a module-specific key prefix to all reads and writes: {/* cosmos/cosmos-sdk store/prefix/store.go:23 — func NewStore(parent types.KVStore, prefix []byte) Store — creates a prefix store scoped to a byte prefix */}

```go
store := prefix.NewStore(ctx.KVStore(k.storeKey), types.KeyPrefixBalances)
// all Set/Get calls on `store` are automatically namespaced under KeyPrefixBalances
```

This gives each module a logical namespace inside its own store key without requiring global coordination over raw byte offsets.

A concrete example shows how a module reads and writes typed state as bytes: {/* cosmos/cosmos-sdk codec/proto_codec.go:49 — func (pc *ProtoCodec) Marshal(o gogoproto.Message) ([]byte, error) — the Marshal method called as k.cdc.Marshal() in keeper code */} {/* cosmos/cosmos-sdk codec/proto_codec.go:78 — func (pc *ProtoCodec) Unmarshal(bz []byte, ptr gogoproto.Message) error — the Unmarshal method called as k.cdc.Unmarshal() in keeper code */}

```go
// write: marshal the coin amount to bytes, then set in store
bz, err := k.cdc.Marshal(&amount)
store.Set(key, bz)

// read: get bytes from store, unmarshal back to coin
var amount sdk.Coin
bz := store.Get(key)
k.cdc.Unmarshal(bz, &amount)
```

The codec (`k.cdc`) is the protobuf codec described in the next section.

## The codec and interface registry

The Cosmos SDK wraps protobuf in a **codec** that modules use for marshaling and unmarshaling. The primary implementation is [`ProtoCodec`](https://github.com/cosmos/cosmos-sdk/blob/v0.53.0/codec/proto_codec.go), which calls protobuf's `Marshal` and `Unmarshal` under the hood. {/* cosmos/cosmos-sdk codec/proto_codec.go:56 — return gogoproto.Marshal(o) — Marshal calls gogoproto.Marshal to produce binary bytes */} {/* cosmos/cosmos-sdk codec/proto_codec.go:79 — err := gogoproto.Unmarshal(bz, ptr) — Unmarshal calls gogoproto.Unmarshal to decode binary bytes */}

```go
type ProtoCodec struct {
    interfaceRegistry types.InterfaceRegistry
}

func (pc *ProtoCodec) Marshal(o ProtoMarshaler) ([]byte, error)
func (pc *ProtoCodec) Unmarshal(bz []byte, ptr ProtoMarshaler) error
```

Keepers hold a reference to the codec and use it to encode and decode state:

```go
type Keeper struct {
    cdc   codec.BinaryCodec
    store storetypes.StoreKey
}
```

The codec is initialized once at app startup and passed to each keeper during initialization.

### Interface types and `Any`

Protobuf is strongly typed. You cannot store a field as "some implementation of an interface" directly in a protobuf message. The Cosmos SDK solves this using protobuf's [`google.protobuf.Any`](https://protobuf.dev/programming-guides/proto3/#any), which wraps an arbitrary message type alongside a URL that identifies what type it contains.

`Any` is used anywhere the SDK needs to serialize a value whose concrete type is not known at compile time. The most common example is public keys. An account might use a secp256k1 key, an ed25519 key, or a multisig key. The `BaseAccount` stores the public key as `Any`: {/* cosmos/cosmos-sdk x/auth/types/auth.pb.go:34 — PubKey *any.Any — the generated Go struct stores pub_key as *any.Any, not a concrete type */}

```proto
message BaseAccount {
  string     address        = 1;
  google.protobuf.Any pub_key = 2;
  uint64     account_number = 3;
  uint64     sequence       = 4;
}
```

The `Any` field holds the serialized public key bytes plus a type URL like `/cosmos.crypto.secp256k1.PubKey`. When the SDK reads the account, it uses the type URL to look up the concrete Go type, then unmarshals the bytes into that type.

#### Messages inside transactions

Transaction messages are the most common use of `Any` in the SDK. A transaction can carry multiple message types from different modules—`bank.MsgSend`, `staking.MsgDelegate`, `gov.MsgVote`—in a single `TxBody`. Because protobuf requires concrete types at the field level, each message is packed into an `Any` before being placed inside the transaction:

```text
MsgSend
   ↓ pack into Any
Any {
  type_url: "/cosmos.bank.v1beta1.MsgSend"
  value:    <protobuf binary bytes>
}
   ↓ placed in TxBody.messages
repeated google.protobuf.Any messages
```

During decoding, the SDK reads the `type_url`, looks up the concrete type in the interface registry, and unmarshals the bytes into the correct message struct. This is why every `sdk.Msg` implementation must be registered with `RegisterInterfaces` before the application starts.

This lookup is handled by the **interface registry**.

### Interface registry

The [`InterfaceRegistry`](https://github.com/cosmos/cosmos-sdk/blob/v0.53.0/codec/types/interface_registry.go) is a runtime map from type URLs to Go types. {/* cosmos/cosmos-sdk codec/types/interface_registry.go:115 — type interfaceRegistry struct { ... typeURLMap map[string]reflect.Type ... } — the registry struct definition with its typeURLMap field */} When the SDK encounters an `Any` value, it queries the registry with the type URL to find the concrete Go type, then uses protobuf to unmarshal the bytes. {/* cosmos/cosmos-sdk codec/types/interface_registry.go:395 — typ, found := registry.typeURLMap[typeURL] — Resolve looks up the concrete Go type by type URL */}

```text
Any { type_url, value_bytes }
           ↓
   InterfaceRegistry.Resolve(type_url)
           ↓
   concrete Go type
           ↓
   proto.Unmarshal(value_bytes, concreteType)
```

{/* cosmos/cosmos-sdk codec/types/interface_registry.go:394 — func (registry *interfaceRegistry) Resolve(typeURL string) (proto.Message, error) — the public Resolve method that the diagram above represents */}

Without the interface registry, the SDK cannot decode `Any` values. This is why types must be explicitly registered before they can be deserialized.

## Registering interface implementations

Because the interface registry is a runtime lookup table, every concrete type that implements an SDK interface must be registered before the application starts. This is done with `RegisterInterfaces`:

```go
// in codec registration, typically in module.go or types/codec.go
func RegisterInterfaces(registry codectypes.InterfaceRegistry) {
    registry.RegisterImplementations(
        (*cryptotypes.PubKey)(nil),
        &secp256k1.PubKey{},
        &ed25519.PubKey{},
    )
}
```

This tells the registry: "a `PubKey` interface can be a `secp256k1.PubKey` or an `ed25519.PubKey`." {/* cosmos/cosmos-sdk crypto/codec/proto.go:13 — crypto module's RegisterInterfaces registers ed25519.PubKey, secp256k1.PubKey, and multisig.LegacyAminoPubKey under the cosmos.crypto.PubKey interface */} If a type is used in an `Any` field anywhere in the application and is not registered, the codec will fail to unmarshal it and return an error. {/* cosmos/cosmos-sdk codec/types/interface_registry.go:397 — return nil, fmt.Errorf("unable to resolve type URL %s", typeURL) — Resolve returns an error when the type URL has not been registered */}

Each module calls `RegisterInterfaces` during app initialization, and `app.go` calls these registration functions through the module manager when building the app. {/* cosmos/cosmos-sdk types/module/module.go:120 — func (bm BasicManager) RegisterInterfaces(registry types.InterfaceRegistry) — iterates all modules calling m.RegisterInterfaces(registry) for each */} Custom types that implement SDK interfaces must follow the same pattern.

## Proto-to-code generation workflow

Writing `.proto` files produces `.pb.go` files through a code generation step. The generated Go code contains struct definitions, marshal/unmarshal methods, and gRPC service stubs. You never edit these generated files directly.

The workflow is:

**1. Write the `.proto` file**

Proto files for a module live in the `proto/` directory at the repository root:

```
proto/myapp/mymodule/v1/
├── tx.proto       # message types (MsgAdd, MsgAddResponse, ...)
├── query.proto    # query service (QueryCount, ...)
├── state.proto    # on-chain state types
└── genesis.proto  # genesis state
```

A message definition:

```proto
syntax = "proto3";
package myapp.mymodule.v1;

message MsgAdd {
  string sender = 1;
  uint64 add    = 2;
}

message MsgAddResponse {
  uint64 updated_count = 1;
}

service Msg {
  rpc Add(MsgAdd) returns (MsgAddResponse);
}
```

**2. Run code generation**

```bash
make proto-gen
```

This runs `buf` (or `protoc` with plugins) against the `.proto` files and produces Go code under the module's `types/` directory:

```
x/mymodule/types/
├── tx.pb.go        # generated: MsgAdd, MsgAddResponse, Marshal/Unmarshal methods
├── query.pb.go     # generated: query request/response types
├── query.pb.gw.go  # generated: gRPC-gateway REST handlers
└── state.pb.go     # generated: on-chain state types
```

**3. Use the generated types**

The generated structs implement `proto.Message` and can be passed directly to the codec for marshaling, registered with the interface registry, and used in keeper methods and message handlers:

```go
// handler receives the generated type
func (m msgServer) Add(ctx context.Context, req *types.MsgAdd) (*types.MsgAddResponse, error) {
    count, err := m.AddCount(ctx, req.Sender, req.Add)
    if err != nil {
        return nil, err
    }
    return &types.MsgAddResponse{UpdatedCount: count}, nil
}
```

The generated gRPC service stub is registered with BaseApp's message router, connecting the handler to the transaction execution pipeline automatically.

## Legacy Amino encoding

Before adopting protobuf, the Cosmos SDK used a custom serialization format called **Amino**. The `LegacyAmino` type still exists in the SDK and wraps `*amino.Codec`: {/* cosmos/cosmos-sdk codec/amino.go:16 — type LegacyAmino struct { Amino *amino.Codec } */}

```go
type LegacyAmino struct {
    Amino *amino.Codec
}
```

Amino was used for transaction encoding, JSON signing documents, and interface serialization. It has been replaced by protobuf for all of these roles, but some legacy components still reference it:

- `LegacyAmino` is still present in the codec package for backward-compatibility
- `LegacyAminoPubKey` (multisig) is registered alongside protobuf public key types
- Some older chains, hardware wallets, and client tooling depend on Amino JSON signing

New modules and chains should use protobuf exclusively. The `LegacyAmino` codec is maintained for compatibility but is not used in the consensus-critical path.

## Encoding in context

Every layer of the Cosmos SDK depends on encoding:

```
Transaction (binary protobuf)
    ↓ broadcast over p2p
CometBFT
    ↓ passes raw bytes to application
BaseApp
    ↓ decodes transaction, extracts messages
Module MsgServer
    ↓ processes message, calls keeper
Keeper
    ↓ marshals state value to bytes
KVStore (raw bytes)
    ↓ committed to disk
AppHash (Merkle root over all KV bytes)
```

Because every step uses protobuf, every step is deterministic. Two validators executing the same transactions always produce the same bytes at every layer, and therefore always arrive at the same AppHash.

For more details on the encoding subsystem and advanced codec usage, see the [Encoding reference](/sdk/v0.53/learn/advanced/encoding).

The next section explains the runtime execution environment that modules operate within: `sdk.Context`, gas metering, and events.
